--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@lucide/svelte": "^0.479.0",
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.9.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tauri-apps/cli": "^2",
     "@types/node": "^22.13.10",
     "autoprefixer": "^10.4.20",
-    "bits-ui": "^1.3.10",
+    "bits-ui": "^1.3.12",
     "clsx": "^2.1.1",
     "lucide-svelte": "^0.479.0",
     "svelte": "^5.0.0",
@@ -33,6 +34,7 @@
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
+    "vaul-svelte": "^1.0.0-next.6",
     "vite": "^6.0.3"
   }
 }
