--- a/package.json
+++ b/package.json
@@ -1,38 +1,42 @@
 {
-  "name": "owlet",
-  "version": "0.1.0",
-  "description": "",
-  "type": "module",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "tauri": "tauri"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.0",
-    "@tauri-apps/cli": "^2",
-    "@types/node": "^22.13.10",
-    "autoprefixer": "^10.4.20",
-    "bits-ui": "^1.3.10",
-    "clsx": "^2.1.1",
-    "lucide-svelte": "^0.479.0",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.3"
-  }
+	"name": "owlet",
+	"version": "0.1.0",
+	"description": "",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"tauri": "tauri",
+		"make": "pnpm dlx shadcn-svelte@next add"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"@tauri-apps/api": "^2",
+		"@tauri-apps/plugin-opener": "^2",
+		"tailwindcss-animate": "^1.0.7",
+		"wavesurfer.js": "^7.9.1"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/kit": "^2.9.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tauri-apps/cli": "^2",
+		"@types/node": "^22.13.10",
+		"autoprefixer": "^10.4.20",
+		"bits-ui": "^1.3.10",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.479.0",
+		"mode-watcher": "^0.5.1",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^0.3.28",
+		"tailwind-merge": "^3.0.2",
+		"tailwind-variants": "^1.0.0",
+		"tailwindcss": "^3.4.17",
+		"typescript": "~5.6.2",
+		"vite": "^6.0.3"
+	}
 }
